package com.android.mygarden.ui.navigation

object NavigationTestTags {
  const val TOP_BAR = "TopBar"
  const val TOP_BAR_TITLE = "TopBarTitle"
  const val TOP_BAR_NAV_BACK_BUTTON = "TopBarNavBackButton"
  const val TOP_BAR_SIGN_OUT_BUTTON = "TopBarSignOutButton"
  const val BOTTOM_BAR = "BottomBar"
  const val CAMERA_BUTTON = "CameraButton"
  const val GARDEN_BUTTON = "GardenButton"
  const val FEED_BUTTON = "FeedButton"
  const val CAMERA_SCREEN = "CameraScreen"
  const val GARDEN_ACHIEVEMENTS_PARENT_SCREEN = "GardenAchievementsParentScreen"
  const val INTERNAL_GARDEN_SCREEN = "InternalGardenScreen"
  const val INTERNAL_ACHIEVEMENTS_SCREEN = "InternalAchievementsGardenScreen"
  const val FEED_SCREEN = "FeedScreen"
  const val EDIT_PLANT_SCREEN = "EditPlantScreen"
  const val ADD_FRIEND_SCREEN = "AddFriendScreen"
  const val FRIENDS_REQUESTS_SCREEN = "FriendsRequestsScreen"
}

