<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Screen Names -->
    <string name="edit_plant_screen_title">Edit Plant</string>
    <string name="edit_profile_screen_title">Edit Profile</string>
    <string name="new_profile_screen_title">New Profile</string>
    <string name="plant_info_screen_title">Plant Info</string>
    <string name="plant_info_from_camera_screen_title">Plant Info From Camera</string>
    <string name="plant_info_from_garden_screen_title">Plant Info From Garden</string>
    <string name="authentication_screen_title">Authentication</string>
    <string name="camera_screen_title">Camera</string>
...
