...
import com.android.mygarden.ui.navigation.NavigationButton
import com.android.mygarden.ui.navigation.NavigationTestTags
import com.android.mygarden.ui.utils.OfflineMessages
import com.android.mygarden.ui.utils.handleOfflineClick

object GardenAchievementsParentScreenTestTags {
  const val AVATAR_EDIT_PROFILE = "UserAvatarEditProfile"
  const val PSEUDO = "Pseudo"
  const val LIKE_BUTTON = "LikeButton"
  const val LIKE_COUNTER = "LikeCounter"

  fun getTestTagForTab(tab: GardenTab) = "${tab.titleRes}_Tab"
}

...
