package com.android.sample.ui.navigation

object NavigationTestTags {
  const val BOTTOM_BAR = "BottomBar"
  const val CAMERA_BUTTON = "CameraButton"
  const val PROFILE_BUTTON = "ProfileButton"
  const val CAMERA_SCREEN = "CameraScreen"
  const val PROFILE_SCREEN = "ProfileScreen"
}
